@@ -37,10 +37,10 @@ lazy val root = (project in file(".")).settings(
   </developers>
 ).settings(scalariformSettings: _*)
 
-addSbtPlugin("com.earldouglas" % "xsbt-web-plugin" % "3.0.0")
+addSbtPlugin("com.earldouglas" % "xsbt-web-plugin" % "3.0.1")
 
 ScriptedPlugin.scriptedSettings
 scriptedLaunchOpts := { scriptedLaunchOpts.value ++
-  Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value)
+  Seq("-Xmx1024M", "-Dplugin.version=" + version.value)
 }
 scriptedBufferLog := false
